tests/lean/2161.lean.expected.out
2161.lean:15:48-15:54: error: failed to reduce to 'true'
  Decidable.rec (fun h => (fun x => false) h) (fun h => (fun x => true) h)
    (instDecidableEqFoo (mul (mul (mul 4 1) 1) 1) 4)
2161.lean:22:48-22:54: error: failed to reduce to 'true'
  Decidable.rec (fun h => (fun x => false) h) (fun h => (fun x => true) h)
    (instDecidableEqFoo (add (add (add 4 1) 1) 1) 4)
